# rust_calculator

./: .gitignore  Cargo.toml  README.md  from_python.py  pyproject.toml  requirements.txt
.github/workflows/: rust.yml
python_calc/: calculator.py  calculator_exception.py
src/: calc_error.rs  calculator.rs  calculator.test.rs  lib.rs  main.rs
tests/: calculator_tests.rs
