[package]
name = "rust_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }

[dev-dependencies]
maturin = "0.9"

[lib]
name = "rust_calculator"
crate-type = ["cdylib"]
