[build-system]
requires = ["maturin >= 0.8.3"]
build-backend = "maturin"

[project]
name = "rust_calculator"
description = "A calculator library written in Rust"
requires-python = ">=3.7.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]